# rotator_face_recognition

./: .gitignore  CMakeLists.txt  model_converter.sh  model_converter_jetson.sh  readme.md
configs/: calib.json
docker/: docker-compose-jetson.yml  docker-compose-x86.yml  dockerfile  dockerfile-jetson  dockerfile-x86
include/: detection_model_inference_helper.h  identification_model_inference_helper.h  inference_objects.hpp  source_manager.hpp  spd_logger_helper.h  utils.hpp
include/tensorrt/: logging.h
scripts/: cam_rotator_test.py  compare.py  dynamic_shapes_to_fixed_shapes.py  inference_onnx.py  inference_onnx_model_full_pipeline.py  model_static_to_dynamic_converter.py  model_static_to_static_converter.py  rotator_move_test.py
src/: detection_model_inference_helper.cpp  detection_model_inference_helper.cu  identification_model_inference_helper.cpp  identification_model_inference_helper.cu  main_cuda_nms.cpp
src/converters/: detection_model_converter.cpp  identification_model_converter.cpp
templates/: DESIGN.md  code.html
